--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,11 +5,13 @@
   "username": "postgres",
   "password": "postgres",
   "database": "gostack_gobarber",
-  "entities":[
-    "src/models/**/*.ts"
+  "entities": [
+    "./src/modules/**/infra/typeorm/entities/*.ts"
   ],
-  "migrations": ["./src/database/migrations/*.ts"],
-  "cli":{
-    "migrationsDir": "./src/database/migrations"
+  "migrations": [
+    "./src/infra/data/typeorm/migrations/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "./src/infra/data/typeorm/migrations"
   }
 }
