--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "@types/mongodb": "^3.5.23",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
